# fatespace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/fatespace/: acquire_hubmap.py  acquire_thymus_atlas.py  convert_thymus_atlas.py  manifest.py
tests/: test_data_validation.py
