[project]
name = "fatespace"
version = "0.1.0"
description = "Multimodal latent cell-state modeling for T-cell fate prediction (thymic development)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "anndata>=0.10",
    "scanpy>=1.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
convert = ["readseurat>=0.1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
